@@ -18,13 +18,14 @@ package io.warp10.script;
 
 import java.io.UnsupportedEncodingException;
 import java.net.URL;
-import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.BitSet;
 import java.util.List;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
+
+import io.warp10.WarpURLDecoder;
 
 public class WebAccessController {
 
@@ -46,12 +47,10 @@ public class WebAccessController {
       int idx = 0;
 
       for (String pattern: subpatterns) {
-        if (pattern.contains("%")) {
-          try {
-            pattern = URLDecoder.decode(pattern, StandardCharsets.UTF_8.name());
-          } catch (UnsupportedEncodingException uee) {
-            throw new RuntimeException(uee);
-          }
+        try {
+          pattern = WarpURLDecoder.decode(pattern, StandardCharsets.UTF_8);
+        } catch (UnsupportedEncodingException uee) {
+          throw new RuntimeException(uee);
         }
 
         boolean exclude = false;
